[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/icon_interp_cubic.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_curve_in.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_curve_out.svg" type="Texture" id=3]
[ext_resource path="res://scripts/FpsCounter.gd" type="Script" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/icon_line_2d.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/icon_camera.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/icon_spring_arm.svg" type="Texture" id=8]
[ext_resource path="res://assets/icons/icon_slider_joint.svg" type="Texture" id=9]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="FpsCounter" type="Label" parent="."]
margin_left = 12.0
margin_top = 11.0
margin_right = 59.0
margin_bottom = 25.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 8
text = "300 fps"
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 98.0
margin_right = 925.0
margin_bottom = 48.0

[node name="Tools" type="HBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 820.0
margin_bottom = 41.0
custom_constants/separation = 10

[node name="ButtonBurry" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_right = 60.0
margin_bottom = 34.0
toggle_mode = true
text = "Burry"
icon = ExtResource( 3 )

[node name="ButtonDig" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 70.0
margin_right = 117.0
margin_bottom = 34.0
toggle_mode = true
text = "Dig"
icon = ExtResource( 2 )

[node name="ButtonLevel" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 127.0
margin_right = 191.0
margin_bottom = 34.0
toggle_mode = true
text = "Level"
icon = ExtResource( 9 )

[node name="ButtonPlane" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 201.0
margin_right = 266.0
margin_bottom = 34.0
toggle_mode = true
text = "Plane"
icon = ExtResource( 8 )

[node name="ButtonSmooth" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 276.0
margin_right = 355.0
margin_bottom = 34.0
toggle_mode = true
text = "Smooth"
icon = ExtResource( 1 )

[node name="ButtonCrease" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 365.0
margin_right = 438.0
margin_bottom = 34.0
toggle_mode = true
text = "Crease"
icon = ExtResource( 6 )

[node name="VSeparator" type="VSeparator" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 448.0
margin_right = 452.0
margin_bottom = 34.0

[node name="VBoxContainerRadius" type="VBoxContainer" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 462.0
margin_right = 562.0
margin_bottom = 34.0

[node name="LabelRadius" type="Label" parent="CenterContainer/PanelContainer/Tools/VBoxContainerRadius"]
margin_right = 100.0
margin_bottom = 14.0
text = "Radius: 10m"

[node name="SliderRadius" type="HSlider" parent="CenterContainer/PanelContainer/Tools/VBoxContainerRadius"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
min_value = 5.0
max_value = 50.0
value = 5.0

[node name="VBoxContainerWeight" type="VBoxContainer" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 572.0
margin_right = 672.0
margin_bottom = 34.0
alignment = 1

[node name="LabelWeight" type="Label" parent="CenterContainer/PanelContainer/Tools/VBoxContainerWeight"]
margin_right = 100.0
margin_bottom = 14.0
text = "Weight: 100%"

[node name="SliderWeight" type="HSlider" parent="CenterContainer/PanelContainer/Tools/VBoxContainerWeight"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
tick_count = 3
ticks_on_borders = true

[node name="VSeparator2" type="VSeparator" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 682.0
margin_right = 686.0
margin_bottom = 34.0

[node name="ButtonResetCamera" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 696.0
margin_right = 762.0
margin_bottom = 34.0
text = "Reset"
icon = ExtResource( 7 )

[node name="ButtonSave" type="Button" parent="CenterContainer/PanelContainer/Tools"]
margin_left = 772.0
margin_right = 813.0
margin_bottom = 34.0
text = "Save"
